neo4j/neo4j-bolt-tcp.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: neo4j-bolt-virtualservice
  namespace: neo4j-ns
spec:
  hosts:
  - gcp.psai.dev
  gateways:
  - istio-system/ps-lbg-gateway
  tcp:
  - match:
    - port: 7687
    route:
    - destination:
        host: neo4j-community.neo4j-ns.svc.cluster.local
        port:
          number: 7687
